--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,5 @@
 {
   "buildCommand": "echo 'No build needed'",
   "outputDirectory": ".",
-  "rewrites": [
-    {
-      "source": "/",
-      "destination": "/war_thunder_rp_rechner.html"
-    }
-  ]
+  "public": true
 }
