--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "echo 'No build needed'",
-  "outputDirectory": ".",
-  "public": true
+  "framework": null,
+  "rewrites": [
+    { "source": "/", "destination": "/war_thunder_rp_rechner.html" }
+  ]
 }
