Refactor Vercel configuration by removing rewrites and adding build command and output directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "framework": null,
-  "rewrites": [
-    { "source": "/", "destination": "/war_thunder_rp_rechner.html" }
-  ]
+  "buildCommand": null,
+  "outputDirectory": "."
 }
